# genai

./: ALGOL_26_ROADMAP_v1.0.md  ANNOUNCEMENT.md  CONTRIBUTING.md  LICENSE  README.md  algo.py  algol re-imagined  prop repo structure
algol26-interpreter/: README.md  main.py  pyproject.toml  test_causal.algol26  test_given.algol26  test_import.algol26  test_inference.algol26  test_verify.algol26
algol26-interpreter/local/: math.algol26
algol26-interpreter/src/: ast.py  builtins.py  distributions.py  interpreter.py  lexer.py  parser.py  runtime.py  type_system.py
algol26-interpreter/tests/: ai-demo.algol26  div.algol26  div2.algol26  exp.algol26  hello.algol26  pow.algol26  simple.algol26
algol26-interpreter/tests/phase4/: basic_chan.algol26  buffered_multi.algol26  select_simple.algol26  select_test.algol26  send_receive.algol26  unbuffered.algol26
algol26-interpreter/typechecker/: __init__.py  inference.py  typecheck.py  types.py
core-modules/: example_string_usage.algol26
core-modules/utils/: string.algol26
docs/: module_system.md  type_system.md
examples/: demo1.algol26
examples/phase4/: async_channels.algol26
genai-memory/: 2026-03-18.md  ALGOL_MIGRATION_PLAN.md  ALGOL_PHASE2_PROGRESS.md  ANNOUNCEMENT_DRAFT.md  ARCHITECTURE_MAP.md  PROJECT_OVERVIEW.md  RECOMMENDATIONS.md
interpreter/: __init__.py  interpreter.py
parser/: __init__.py  ast.py  lexer.py  parser.py
tests/: test_phase2.py
tests/phase4/: async_test.algol26  select_test.algol26  test_concurrency.algol26
typechecker/: __init__.py  inference.py  modules.py  typecheck.py
(+9 files in other folders)
