[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo26-interpreter"
version = "0.1.0"
description = "Minimal Viable Interpreter for ALGOL 26"
authors = [{name = "Algo-interpreter"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["algol", "interpreter", "programming-language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Interpreters",
]

[project.scripts]
algo26 = "main:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-dir]
"" = "src"